bzip2ida/g3/BZ2_hbCreateDecodeTables
/data/output_dir/patch/bzip2/ida/gcc/O3/bzip2-gcc-O3/BZ2_hbCreateDecodeTables/src/huffman.c:807:44: error: use of undeclared identifier 'xmmword_41A6C0'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_41A6C0); 
                                           ^
/data/output_dir/patch/bzip2/ida/gcc/O3/bzip2-gcc-O3/BZ2_hbCreateDecodeTables/src/huffman.c:835:37: error: use of undeclared identifier 'qword_41A6D0'
_mm_loadl_epi64( ( const __m128i *)&qword_41A6D0)), 
                                    ^
2 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/gcc/O3/bzip2-gcc-O3/BZ2_hbCreateDecodeTables/src/obj/huffman.o] Error 1
